# ruparawi-backend

./: .coverage  .env.testing  .gitignore  Dockerfile  LICENSE  README.md  app.py  conftest.py  pyproject.toml
auth/: auth.py  jwt.py
config/: __init__.py  remote.py  settings.py  testing.py
instance/: database.py  test.db
migrations/versions/: 0d115ad20ee2_feat_moved_vendor_status_to_vendor_.py  1a8373f7efce_fix_role_in_user.py  2c1897f923b6_fix_enum_to_string_for_promotion_type.py  39504d52489c_feat_article.py  3979de86d6ab_feat_removed_target_id_in_adminlog.py  476bb5938f46_feat_many_to_many_role.py  61080c4e6ccf_fix_removed_is_vendor.py  6206ad6265f9_feat_removed_timestamp_in_roles.py  7acaecf4b87f_feat_roles_in_user.py  7fc06fb21374_feat_wishlist.py  8528f68c115c_feat_update_testimonial.py  9af13ae4d542_feat_id_to_association_table.py  (+13 more)
models/: __init__.py  article.py  base.py  community.py  order.py  product.py  product_review.py  testimonial.py  user.py
repo/: admin.py  order.py  product.py  product_review.py  testimonial.py  user.py  vendor.py
router/: __init__.py  admin.py  auth.py  order.py  product.py  product_review.py  testimonial.py  user.py  vendor.py
scheduled/: jobs.py
schemas/: admin.py  article.py  auth.py  order.py  product.py  user.py  vendor.py
shared/: time.py
tests/: test_admin.py  test_auth.py  test_order.py  test_product.py  test_product_review.py  test_scheduled.py  test_testimonial.py  test_user.py  test_vendor.py
views/: admin.py  auth.py  order.py  product.py  product_review.py  testimonial.py  user.py  vendor.py
